--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
